# fuschpool

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: conftest.py  docker-entrypoint.sh  manage.py  pytest.ini
app/app/: settings.py
app/core/: forms.py  models.py  urls.py  views.py
app/core/migrations/: 0001_initial.py
app/core/static/core/css/: core.css
app/core/templates/core/: index.html  profile.html
app/core/tests/fixtures/: pick_pool_user.py
app/nfl/: __init__.py  api.py  defines.py  models.py  tasks.py  urls.py  views.py
app/nfl/fixtures/: nfl_s2019.yaml  nfl_s2021.jsonl
app/nfl/management/commands/: update_games.py
app/nfl/migrations/: 0001_initial.py  0002_fixtures.py  0003_auto_20220117_2019.py
app/nfl/static/nfl/css/: custom.css
app/nfl/templates/nfl/: index.html  picks.html  schedule.html  standings.html  teams.html
app/nfl/tests/: test_models.py  test_views.py
app/nfl/tests/data/: 1_weeks.json  2_events.json  3_event.json  4_score.json  calendar_whitelist.json
app/nfl/tests/fixtures/: game.py  pick.py  user.py  week.py
app/pick_pool/: apps.py  apscheduler.py  asgi.py  settings.py  urls.py  wsgi.py
