[tool.poetry]
name = "fuschpool"
version = "0.1.0"
description = "Pick'em pool for family and friends"
authors = ["Marcel Konrad <makonrad@gmx.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "~3.2.10"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
httpx = "^0.21.1"
django-bootstrap4 = "^21.2"
mysqlclient = "^2.1.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pyyaml = "^5.3"
pytest-django = "^3.8.0"
pytest = "^6.2.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
    | migrations
)/
'''
