[project]
name = "fuschpool"
version = "0.1.0"
description = "Pick'em pool for family and friends"
authors = [{ name = "Marcel Konrad", email = "makonrad@gmx.de" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "django~=3.2.12",
    "uvicorn>=0.16.0,<0.17",
    "gunicorn>=20.1.0,<21",
    "httpx>=0.21.1,<0.22",
    "django-bootstrap4~=21.2",
    "mysqlclient>=2.1.0,<3",
    "whitenoise>=5.3.0,<6",
    "huey>=2.4.3,<3",
    "redis>=4.1.1,<5",
]

[dependency-groups]
dev = [
    "flake8>=3.7.9,<4",
    "pyyaml~=5.3",
    "pytest-django>=3.8.0,<4",
    "pytest>=6.2.5,<7",
    "black~=19.10b0",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
    | migrations
)/
'''
