[project]
name = "fuschpool"
version = "0.1.0"
description = "Pick'em pool for family and friends"
authors = [{ name = "Marcel Konrad", email = "makonrad@gmx.de" }]
requires-python = "~=3.12.0"
license = "MIT"
dependencies = [
    "django~=5.2.5",
    "uvicorn>=0.16.0,<0.17",
    "gunicorn>=20.1.0,<21",
    "httpx>=0.21.1,<0.22",
    "django-bootstrap4~=21.2",
    "mysqlclient>=2.1.0,<3",
    "whitenoise>=5.3.0,<6",
    "huey>=2.4.3,<3",
    "redis>=4.1.1,<5",
]

[dependency-groups]
dev = ["pytest-django~=4.11.0", "pytest~=8.4.1", "pyyaml", "ruff"]

[tool.black]
exclude = '''
/(
    \.git
    | migrations
)/
'''
